# kiwi

./: Cargo.toml  README.md  sample_config.toml
kiwi/: Cargo.toml
kiwi-parser/: Cargo.toml
kiwi-parser/src/: key.rs  layout.rs  lib.rs
kiwi-parser/src/config/: app.rs  binding.rs  error.rs  layer.rs  mod.rs  utils.rs
kiwi-parser/src/config/action/: mod.rs  resize.rs  snap.rs
kiwi/src/: control.rs  event_tap.rs  ffi.rs  input.rs  main.rs  manager.rs  shell_runtime.rs  translate.rs
kiwi/src/cli/: error.rs  mod.rs
kiwi/src/cli/commands/: check.rs  completions.rs  config.rs  ctl.rs  daemon.rs  install.rs  logs.rs  mod.rs  update.rs
kiwi/src/hotkey/: mod.rs
kiwi/src/window/: display.rs  focused.rs  list.rs  mod.rs  ops.rs
src/: a11y.rs  ffi.rs  input.rs  main.rs  manager.rs
src/hotkey/: mod.rs
src/parser/: mod.rs
src/window/: display.rs  ffi.rs  focused.rs  list.rs  mod.rs  ops.rs
