[package]
name = "kiwie"
version = "0.1.0"
edition = "2024"
description = "A hotkey daemon for macOS"
license = "MIT"
repository = "https://github.com/mostafahagras/kiwi"
readme = "README.md"

[[bin]]
name = "kiwi"
path = "src/main.rs"

[dependencies]
bitflags = "2.10.0"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
core-graphics-types = "0.2.0"
objc = "0.2.7"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
kiwi-parser = { path = "../kiwi-parser" }

[lints.rust]
unexpected_cfgs = "allow"
