[package]
name = "kiwie"
version = "0.1.0"
edition = "2024"
description = "A hotkey daemon for macOS"
license = "MIT"
repository = "https://github.com/mostafahagras/kiwi"
readme = "README.md"

[[bin]]
name = "kiwi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
bitflags = "2.10.0"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
core-graphics-types = "0.2.0"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
kiwi-parser = { path = "../kiwi-parser" }
miette = { version = "7.5.0", features = ["fancy"] }
foreign-types = "0.5.0"
libc = "0.2.177"
shell-words = "1.1.0"
